Things no longer overflow off the screen for iPhone SE screensize and below. Rearranged score capture section using media queries.

--- a/assets/icons/style.css
+++ b/assets/icons/style.css
@@ -533,3 +533,21 @@ td.highscore-body.bottom {
     left: 50%;
   }
 }
+
+@media screen and (max-height: 668px) {
+  .score-capture {
+    position: relative;
+    bottom: 54%;
+    left: 8%;
+  }
+  .player-times {
+    flex-direction: column;
+    bottom: 25%;
+    right: 5%;
+  }
+
+  .obj-container {
+    top: 20%;
+    right: 15%
+  }
+}
